Version 4.1.1 beta, release Notes

Beware the update of asteroid and comet from the main menu now delete all the old elements data from the database!
If you need to keep this old elements or cumulate data from many source you use the function from the menu Setup/Solar syste.

New functions:

- New mosaic tool
- Option to show only the celestial equator line.
- New default interface with minimal button bar.
- Saved circle file (.cdcc) include the coordinate equinox on the first row.
- Add Delta T update menu.
- Add orange night vision mode.
- Allow per chart observatory horizon profile.
- Separate label setting for Asteroid and Comet.
- INDI server and driver selection is now in the connection box. Option to launch indistarter is removed.
- Show a warning in window title if running as administrator
- Add option to not filter the bright nebula by magnitude
- Add option to set the line width. Beware this not work with dash line when printing on Windows because of API limitation. 
- It is now possible to use a telescope connected to a remote ASCOM Windows computer from Skychart running on Linux or macOS. See: https://github.com/ASCOMInitiative/ASCOMRemote/blob/master/Documentation/ASCOM%20Remote%20Concept.pdf
- The resolution of the background image can now be limited to improve the performance if the screen is too big or if there is not enough cpu core.
- Client/server communication can now use J2000 coordinates instead of the current chart setting. You can change this option in Setup/General/Server.
- Remove obsolete/unmaintainable lx200 and encoder drivers. Please use the corresponding ASCOM or INDI drivers.
  - for generic lx200: https://pixelstelescopes.wordpress.com/advanced-lx200/
  - for digital circle: http://eksfiles.net/digital-setting-circles/ascom-driver-for-digital-setting-circles/
- Depreciate the use of Mysql database and suggest to move to Sqlite if currently in use.
- Allow to lock at the position set from the menu View/Position.